# knyfe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.sh  docker-compose.yml
.devcontainer/: devcontainer.json
config-templates/: knyfe.env.template  postgres.env.template
knyfe/: manage.py  pyproject.toml
knyfe/bookings/: views.py
knyfe/bookings/migrations/: 0001_initial.py  0002_booking.py  0003_booking_status.py  0004_bookingevent_bookingprojection.py  0005_delete_booking.py
knyfe/bookings/models/: __init__.py  booking.py  booking_event.py  booking_projection.py  user.py
knyfe/bookings/services/: booking_availability_service.py  booking_event_handler.py  booking_event_service.py  booking_handler.py  booking_projection_service.py  booking_service.py
knyfe/bookings/tests/: test_booking_api.py  test_booking_availability_api.py  test_booking_event_api.py
knyfe/bookings/views/: __init__.py  booking_availability.py  booking_availability_view.py  booking_event_view.py  booking_view.py
knyfe/knyfe/: asgi.py  settings.py  urls.py  wsgi.py
knyfe/tests/: test_booking_api.py
knyfe/utils/: result.py
