[tool.poetry]
name = "knyfe"
version = "0.1.0"
description = ""
authors = ["Wanseo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.16"
psycopg = "3.1.8"
psycopg-binary = "3.1.8"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
